--- a/cssFile/style.css
+++ b/cssFile/style.css
@@ -85,51 +85,15 @@ body {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.container > .main-area > .country-display-area .card {
-  padding: 5px;
-}
-
-.container > .main-area > .country-display-area .card img {
-  width: 100%;
-  height: 70%;
-}
-
-.container > .main-area > .country-display-area .card .detailsBtn {
-  width: 30%;
-  padding: 10px;
-  border-radius: 5px;
-  margin-top: 5px;
-  cursor: pointer;
-}
-
-.container > .main-area > .country-details-area {
-  display: none;
-  padding: 15px;
-}
-
-.container > .main-area > .country-details-area .country-detail {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  gap: 30px;
-  padding: 10px;
-}
-
-.container > .main-area > .country-details-area .country-detail .flag-img {
-  -webkit-box-flex: 4;
-      -ms-flex-positive: 4;
-          flex-grow: 4;
-}
-
-.container > .main-area > .country-details-area .country-detail .countryInfo {
-  -webkit-box-flex: 8;
-      -ms-flex-positive: 8;
-          flex-grow: 8;
+.container > .main-area > .searchValue {
+  text-align: center;
 }
 /*# sourceMappingURL=style.css.map */
