--- a/cssFile/style.scss
+++ b/cssFile/style.scss
@@ -62,37 +62,14 @@ body {
         > .country-display-area {
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-around;
-            .card {
-                padding: 5px;
-                img {
-                    width: 100%;
-                    height: 70%;
-                }
-                .detailsBtn {
-                    width: 30%;
-                    padding: 10px;
-                    border-radius: 5px;
-                    margin-top: 5px;
-                    cursor: pointer;
-                }
-            }
+            justify-content: space-evenly;
+            align-items: center;
         }
         > .country-details-area {
-            display: none;
-            padding: 15px;
-            .country-detail {
-                display: flex;
-                flex-wrap: wrap;
-                gap: 30px;
-                padding: 10px;
-                .flag-img {
-                    flex-grow: 4;
-                }
-                .countryInfo {
-                    flex-grow: 8;
-                }
-            }
+        }
+
+        > .searchValue {
+            text-align: center;
         }
     }
 }
