--- a/cssFile/style.scss
+++ b/cssFile/style.scss
@@ -1,75 +1,23 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 body {
     font-family: "Times New Roman", Times, serif;
-    background-color: #0000001c;
 }
 .container {
-    width: 1050px;
-    margin: 0 auto;
-    padding: 10px;
-    // padding: 0 10px;
-    background-color: #bbb5b500;
-    > .header-area {
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        width: 100%;
-        padding: 5px;
-        .content-side {
-            width: 50%;
-        }
-        .map-img-side {
-            width: 50%;
-            img {
-                width: 100%;
-            }
-        }
-    }
-    //header end
     > .main-area {
-        text-align: center;
-        margin-top: 30px;
-        width: 100%;
-        > .nav-bar {
-            margin: 30px 0;
-            ul {
-                margin: 0;
-                padding: 0;
-                list-style: none;
-                display: grid;
-                grid-template-columns: repeat(5, 1fr);
-            }
-        }
-        //nav-bar end
-        > .search-box {
-            margin-bottom: 20px;
-            .input-box {
-                width: 40%;
-                padding: 10px;
-                border-radius: 5px;
-            }
-            button {
-                width: 7%;
-                padding: 10px;
-                border-radius: 5px;
-            }
-        }
-        //search-box end
-        > .country-display-area {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-evenly;
-            align-items: center;
+        > .searchValue {
+            display: none;
         }
         > .country-details-area {
+            display: none;
         }
-
-        > .searchValue {
-            text-align: center;
+    }
+    footer {
+        text-align: center;
+        button {
+            border-radius: 50%;
+            padding: 10px;
+            background-color: #f77307;
+            color: #ffff;
+            margin: 15px 0;
         }
     }
 }
