add new features

--- a/cssFile/style.scss
+++ b/cssFile/style.scss
@@ -6,6 +6,9 @@ body {
         > .searchValue {
             display: none;
         }
+        > .country-display-area {
+            height: 100vh;
+        }
         > .country-details-area {
             display: none;
         }
